--- a/new.HTML
+++ b/new.HTML
@@ -52,7 +52,7 @@
     </div>
   </div>
   <section class="aboutus">
-    <h1 id="textcolor" >ABOUT <span>US</span></h1>
+    <h1 id="textcolor">ABOUT <span>US</span></h1>
     <div class="aboutusContent">
       <div class="aboutusimg"></div>
       <div class="aboutustext">
@@ -114,7 +114,7 @@
       <div class="ourprodukt firstElement">
         <i class='bx bx-cart-add'></i>
         <i class='bx bx-show-alt'></i>
-        <i class='bx bxs-heart' ></i>
+        <i class='bx bxs-heart'></i>
         <div>
           <img src="product-1.png" alt="">
         </div>
@@ -131,7 +131,7 @@
       <div class="ourprodukt secondElement">
         <i class='bx bx-cart-add'></i>
         <i class='bx bx-show-alt'></i>
-        <i class='bx bxs-heart' ></i>
+        <i class='bx bxs-heart'></i>
         <div>
           <img src="product-2.png" alt="">
         </div>
@@ -149,7 +149,7 @@
       <div class="ourprodukt thirdElement">
         <i class='bx bx-cart-add'></i>
         <i class='bx bx-show-alt'></i>
-        <i class='bx bxs-heart' ></i>
+        <i class='bx bxs-heart'></i>
         <div>
           <img src="product-3.png" alt="">
         </div>
@@ -167,6 +167,57 @@
     </div>
     </div>
   </section>
+  <section class="customer__review">
+    <h1> CUSTOMER'S<span id="textcolor"> REVIEW</span></h1>
+    <div class="customer__review__content">
+      <div class="Review  firstdiv">
+        <img src="quote-img.png" alt="">
+        <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolorum. Facilis earum deleniti
+          veritatis animi nisi nobis! Quia accusantium, similique veniam eaque labore libero consequuntur tenetur magni
+          reiciendis soluta iusto.</P>
+        <img class="photo" src="pic-1.png" alt="">
+        <h2> John Deo</h2>
+        <div>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star-half' id="star"></i>
+        </div>
+      </div>
+      <div class="Review  seconddiv">
+        <img src="quote-img.png" alt="">
+        <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolorum. Facilis earum deleniti
+          veritatis animi nisi nobis! Quia accusantium, similique veniam eaque labore libero consequuntur tenetur magni
+          reiciendis soluta iusto.</P>
+        <img class="photo" src="pic-2.png" alt="">
+        <h2> John Deo</h2>
+        <div>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star-half' id="star"></i>
+        </div>
+      </div>
+      <div class="Review  thirddiv">
+        <img src="quote-img.png" alt="">
+        <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolorum. Facilis earum deleniti
+          veritatis animi nisi nobis! Quia accusantium, similique veniam eaque labore libero consequuntur tenetur magni
+          reiciendis soluta iusto.</P>
+        <img class="photo" src="pic-3.png" alt="">
+        <h2> John Deo</h2>
+        <div>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star' id="star"></i>
+          <i class='bx bxs-star-half' id="star"></i>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
