footer was added

--- a/new.HTML
+++ b/new.HTML
@@ -220,12 +220,13 @@
   <section class="contactUs">
     <h2> <span id="textcolor">CONTACT</span> US</h2>
     <div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5326.547169220586!2d11.599414176086285!3d48.1242471520895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf71a3829e9b%3A0x4eea551fc7e9235f!2sReDI%20School%20of%20Digital%20Integration%20Munich!5e0!3m2!1sde!2sde!4v1715542200863!5m2!1sde!2sde"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5326.547169220586!2d11.599414176086285!3d48.1242471520895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf71a3829e9b%3A0x4eea551fc7e9235f!2sReDI%20School%20of%20Digital%20Integration%20Munich!5e0!3m2!1sde!2sde!4v1715542200863!5m2!1sde!2sde"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <form>
-      <h1> GET IN TOUCH</h1>
+      <h1> GET IN <span id="textcolor">TOUCH</span></h1>
       <div class="getintouch__icons">
         <input type="text" placeholder="name">
         <i class='bx bx-user'></i>
@@ -241,6 +242,49 @@
       <button> Contact now</button>
     </form>
   </section>
+  <section>
+    <div class="wrapper__ourblogs">
+      <div class="ourblogs">
+        <div class="img__first"></div>
+        <h1>Tasty and Refreshing Coffe</h1>
+        <h3> By Admin/21st May, 2021</h3>
+        <p>Lorem ipsum dolorem molestias repudianda nam culpa adipisci voluptas.</p>
+        <button> Read More</button>
+      </div>
+      <div class="ourblogs">
+        <div class="img__second"></div>
+        <h1>Tasty and Refreshing Coffe</h1>
+        <h3> By Admin/21st May, 2021</h3>
+        <p>Lorem ipsum dolorem molestias repudiandae am culpa adipisci voluptas.</p>
+        <button> Read More</button>
+      </div>
+      <div class="ourblogs">
+        <div class="img__third"></div>
+        <h1>Tasty and Refreshing Coffe</h1>
+        <h3> By Admin/21st May, 2021</h3>
+        <p>Lorem ipsum dolorem molestias repudiandae quaculpa adipisci voluptas.</p>
+        <button> Read More</button>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="footer__icons">
+      <i class='bx bxl-facebook'></i>
+      <i class='bx bxl-twitter'></i>
+      <i class='bx bxl-instagram'></i>
+      <i class='bx bxl-linkedin'></i>
+      <i class='bx bxl-upwork'></i>
+    </div>
+    <div class="footer__nav">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Menu</a>
+      <a href="#">Product</a>
+      <a href="#">Review</a>
+      <a href="#">Sontact</a>
+      <a href="#">Blogs</a>
+    </div>
+  </footer>
 
 </body>
 
