--- a/new.HTML
+++ b/new.HTML
@@ -23,9 +23,9 @@
       <div class="navIcons">
         <i class="bx bx-search-alt-2"></i>
         <i class="bx bxs-shopping-bag"></i>
-        <i class="bx bx-menu"></i>
+        <i class="bx bx-menu" id="Hamburger"></i>
       </div>
-      <ul>
+      <ul class="ulnav hidden">
         <button>
           <i class="bx bx-x"></i>
         </button>
@@ -219,12 +219,11 @@
   </section>
   <section class="contactUs">
     <h2> <span id="textcolor">CONTACT</span> US</h2>
-    <div>
+    <div class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5326.547169220586!2d11.599414176086285!3d48.1242471520895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479ddf71a3829e9b%3A0x4eea551fc7e9235f!2sReDI%20School%20of%20Digital%20Integration%20Munich!5e0!3m2!1sde!2sde!4v1715542200863!5m2!1sde!2sde"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
     <form>
       <h1> GET IN <span id="textcolor">TOUCH</span></h1>
       <div class="getintouch__icons">
@@ -240,9 +239,11 @@
         <i class='bx bx-phone-call'></i>
       </div>
       <button> Contact now</button>
+    </div>
     </form>
   </section>
-  <section>
+  <section class="our___blogs">
+    <h2> OUR <span id="textcolor">BLOGS</span></h2>
     <div class="wrapper__ourblogs">
       <div class="ourblogs">
         <div class="img__first"></div>
@@ -285,6 +286,8 @@
       <a href="#">Blogs</a>
     </div>
   </footer>
+
+  <script src="new.js"></script>
 
 </body>
 
