--- a/new.HTML
+++ b/new.HTML
@@ -27,7 +27,7 @@
       </div>
       <ul class="ulnav hidden">
         <button>
-          <i class="bx bx-x"></i>
+          <i class="bx bx-x" id="closenav"></i>
         </button>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
