--- a/new.HTML
+++ b/new.HTML
@@ -25,7 +25,7 @@
         <i class="bx bxs-shopping-bag"></i>
         <i class="bx bx-menu" id="Hamburger"></i>
       </div>
-      <ul class="ulnav hidden">
+      <ul class="ulnav">
         <button>
           <i class="bx bx-x" id="closenav"></i>
         </button>
