Hover was added

--- a/new.HTML
+++ b/new.HTML
@@ -246,21 +246,21 @@
     <h2> OUR <span id="textcolor">BLOGS</span></h2>
     <div class="wrapper__ourblogs">
       <div class="ourblogs">
-        <div class="img__first"></div>
+        <div class="img__first ourblogs__img"></div>
         <h1>Tasty and Refreshing Coffe</h1>
         <h3> By Admin/21st May, 2021</h3>
         <p>Lorem ipsum dolorem molestias repudianda nam culpa adipisci voluptas.</p>
         <button> Read More</button>
       </div>
       <div class="ourblogs">
-        <div class="img__second"></div>
+        <div class="img__second ourblogs__img"></div>
         <h1>Tasty and Refreshing Coffe</h1>
         <h3> By Admin/21st May, 2021</h3>
         <p>Lorem ipsum dolorem molestias repudiandae am culpa adipisci voluptas.</p>
         <button> Read More</button>
       </div>
       <div class="ourblogs">
-        <div class="img__third"></div>
+        <div class="img__third ourblogs__img"></div>
         <h1>Tasty and Refreshing Coffe</h1>
         <h3> By Admin/21st May, 2021</h3>
         <p>Lorem ipsum dolorem molestias repudiandae quaculpa adipisci voluptas.</p>
