--- a/new.HTML
+++ b/new.HTML
@@ -112,9 +112,9 @@
     <h2>OUR<span id="textcolor"> PRODUCTS</span></h2>
     <div class="ourproductslist">
       <div class="ourprodukt firstElement">
-        <i class='bx bx-cart-add'></i>
-        <i class='bx bx-show-alt'></i>
-        <i class='bx bxs-heart'></i>
+        <i class='bx bx-cart-add' id="ourproductsIcon"></i>
+        <i class='bx bx-show-alt' id="ourproductsIcon" ></i>
+        <i class='bx bxs-heart' id="ourproductsIcon"></i>
         <div>
           <img src="product-1.png" alt="">
         </div>
@@ -129,9 +129,9 @@
         <p>$ 15.99 </p>
       </div>
       <div class="ourprodukt secondElement">
-        <i class='bx bx-cart-add'></i>
-        <i class='bx bx-show-alt'></i>
-        <i class='bx bxs-heart'></i>
+        <i class='bx bx-cart-add' id="ourproductsIcon"></i>
+        <i class='bx bx-show-alt' id="ourproductsIcon"></i>
+        <i class='bx bxs-heart' id="ourproductsIcon"></i>
         <div>
           <img src="product-2.png" alt="">
         </div>
@@ -147,9 +147,9 @@
       </div>
 
       <div class="ourprodukt thirdElement">
-        <i class='bx bx-cart-add'></i>
-        <i class='bx bx-show-alt'></i>
-        <i class='bx bxs-heart'></i>
+        <i class='bx bx-cart-add' id="ourproductsIcon"></i>
+        <i class='bx bx-show-alt' id="ourproductsIcon"></i>
+        <i class='bx bxs-heart' id="ourproductsIcon"></i>
         <div>
           <img src="product-3.png" alt="">
         </div>
